dynamic speed fixes